@@ -1,3 +1,9 @@
+2001-03-10  Dave Peticolas  <dave@krondo.com>
+
+	* src/engine/Ledger-xml-parser-v1.c
+	(ledger_data_after_child_handler): mark pricedb as clean after
+	loading
+
 2001-03-09  Bill Gribble  <grib@billgribble.com>
 
 	* add configure/acconfig option for GPG
